--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   height: 100vh;
 }
+
 main {
   background-color: rgba(227, 193, 173, 0.85);
   position: relative;
@@ -26,6 +27,7 @@ main {
 h1 {
   margin-bottom: 20px;
 }
+
 #search {
   border-radius: 5px 0 0 5px;
   border: none;
@@ -42,6 +44,7 @@ h1 {
   width: 5em;
   cursor: pointer;
 }
+
 #weather-wrapper {
   display: flex;
   flex-direction: column;
@@ -52,4 +55,20 @@ h1 {
 #weather-search {
   display: flex;
   width: 50%;
+}
+
+#weather-data {
+  background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 5px;
+  padding: 1.5em;
+  margin-top: 20px;
+
+  text-align: center;
+  align-items: center;
+  gap: 12px;
+}
+
+#weather-data > img {
+  border-radius: 50%;
+  background-color: lightskyblue;
 }
